istio/06-proxying-mtls-connection/egressgateway/03-external-service-ardikabs-com-eg-gw.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: external-service-ardikabs-com-eg-gw
  namespace: istio-system
  labels:
    squad: "foundation"
    tribe: "system"
spec:
  selector:
    istio: egressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - external-service.ardikabs.com
      tls:
        mode: ISTIO_MUTUAL
