istio/06-proxying-mtls-connection/egressgateway/00-external-service-ardikabs-com-se.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: external-service-ardikabs-com-se
  namespace: istio-system
  labels:
    squad: "foundation"
    tribe: "system"
spec:
  exportTo:
    - "."
  hosts:
    - external-service.ardikabs.com
  ports:
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
