istio/06-proxying-mtls-connection/egressgateway/02-external-service-ardikabs-com-mesh-dr.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: external-service-ardikabs-com-mesh-dr
  labels:
    squad: "foundation"
    tribe: "system"
  namespace: istio-system
spec:
  exportTo:
    - "*"
  host: istio-egressgateway.istio-system.svc.cluster.local
  subsets:
    - name: external-service-ardikabs-com-mtls
      trafficPolicy:
        loadBalancer:
          simple: ROUND_ROBIN
        portLevelSettings:
          - port:
              number: 443
            tls:
              mode: ISTIO_MUTUAL
